# git-branch-janitor

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: index.html
janitor/: __init__.py  cli.py  core.py
tests/: test_core.py
